# ncdata

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  environment.yml  ncdata_env_trial.yml  ncdata_xarray_save_sequences.txt  pyproject.toml  setup.py  xr_dataset_load_sequence.txt
.github/: dependabot.yml
.github/workflows/: ci-linkchecks.yml  ci-tests.yml
docs/: Makefile  change_log.rst  conf.py  index.rst
docs/_static/: logo_originals.xlsx
docs/_static/css/: hiddencode.css
docs/_templates/: repo.html
docs/changelog_fragments/: 116.dev.txt  117.feat.rst  123.dev.rst  131.feat.rst  136.dev.rst  145.dev.rst  153.bug.rst  161.doc.rst  166.feat.rst  173.dev.rst  174.doc.rst  175.dev.rst  183.bug.rst  186.dev.rst  68.feat.rst  87.feat.rst
docs/details/: character_handling.rst  details_index.rst  developer_notes.rst  interface_support.rst  known_issues.rst  threadlock_sharing.rst
docs/details/api/: modules.rst  ncdata.dataset_like.rst  ncdata.iris.rst  ncdata.iris_xarray.rst  ncdata.netcdf4.rst  ncdata.rst  ncdata.threadlock_sharing.rst  ncdata.utils.rst  ncdata.xarray.rst
docs/userdocs/: getting_started.rst  user_guide.rst
docs/userdocs/getting_started/: getting_started.rst  installation.rst  introduction.rst
docs/userdocs/user_guide/: _snippets.rst  common_operations.rst  data_objects.rst  design_principles.rst  general_topics.rst  howtos.rst  known_issues.rst  user_guide.rst  utilities.rst
lib/ncdata/: __init__.py  _core.py  dataset_like.py  iris.py  iris_xarray.py  netcdf4.py  threadlock_sharing.py  utils.py  xarray.py
lib/ncdata/utils/: __init__.py  _compare_nc_datasets.py  _copy.py  _dim_indexing.py  _rename_dim.py  _save_errors.py
lib/tests/integration/: ex_iris_xarray_conversion.py  nc4_interface_exercise.py  ncdata_exercise.py
requirements/: readthedocs.yml
tests/: __init__.py  _compare_nc_datasets.py  data_testcase_schemas.py  samplecode_cdlgen_comparablecdl.py  test_samplecode_cdlgen_comparablecdl.py
tests/integration/: __init__.py  equivalence_testing_utils.py  ex_dataset_print.py  ex_iris_saveto_ncdata.py  ex_iris_xarray_conversion.py  ex_ncdata_netcdf_conversion.py  roundtrips_utils.py  test_exercises.py  test_iris_load_and_save_equivalence.py  test_iris_xarray_roundtrips.py  test_netcdf_roundtrips.py  test_roundtrips_iris.py  test_roundtrips_ixi_xix.py  test_roundtrips_netcdf.py  test_roundtrips_xarray.py  test_xarray_load_and_save_equivalence.py  test_zarr_to_iris.py
tests/integration/example_scripts/: __init__.py  ex_dataset_print.py  ex_dataset_print_with-NameMap_NOTSAVED.py  ex_iris_saveto_ncdata.py  ex_iris_xarray_conversion.py  ex_ncdata_netcdf_conversion.py
tests/testdata/: toa_brightness_temperature.nc
tests/unit/: __init__.py
tests/unit/core/: __init__.py  test_AttributeAccessMixin.py  test_AttrvalsDict.py  test_NameMap.py  test_NcAttribute.py  test_NcData.py  test_NcDimension.py  test_NcVariable.py
tests/unit/iris/: __init__.py  test_from_iris.py  test_to_iris.py
tests/unit/utils/: tmp.nc  (+4 more)
tools/: check_doctest.py  run_doctests.py
(+21 files in other folders)
